# 2026_Projects

./: .bandit  .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  new.cpp  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code-quality.yml  dependency-scan.yml
ai_agents/: __init__.py  base_agent.py  coverage_agent.py  debug_agent.py  verification_agent.py
cpp_arch_models/: README.md  base_model.cpp  base_model.h  processor_model.cpp  processor_model.h
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md
examples/: README.md  ai_verification_example.py  cpp_model_example.cpp  uvm_testbench_example.sv
src/: calculator.py  validation.py
sv_verif_agents/: README.md  apb_agent.sv  axi4_lite_agent.sv  uart_agent.sv
tests/: test_calculator.py  test_validation.py
uvm_components/: README.md  uvm_base_agent.sv  uvm_base_driver.sv  uvm_base_env.sv  uvm_base_monitor.sv  uvm_base_scoreboard.sv  uvm_components_pkg.sv
